--- a/recipes/flammkuchen.html
+++ b/recipes/flammkuchen.html
@@ -8,6 +8,7 @@
 <body>
   <section>
     <h1>Flammkuchen Recipe</h1>
+    <img src="../img/flammkuchen.png" alt="Schnitzel">
   </section>
 </body>
 </html>
