--- a/recipes/kottbullar.html
+++ b/recipes/kottbullar.html
@@ -8,6 +8,7 @@
 <body>
   <section>
     <h1>Köttbullar Recipe</h1>
+    <img src="../img/kottbullar.png" alt="Köttbullar">
   </section>
 </body>
 </html>
