--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Odin Recipes</title>
+  <link rel="stylesheet" href="css/styles.css" type="text/css">
 </head>
 <body>
-  <section>
+  <main>
     <h1>Odin Recipes</h1>
     <ul>
       <li><a href="recipes/kottbullar.html">Köttbullar</a></li>
       <li><a href="recipes/flammkuchen.html">Flammkuchen</a></li>
       <li><a href="recipes/schnitzel.html">Schnitzel</a></li>
     </ul>
-  </section>
+  </main>
 </body>
 </html>
