--- a/recipes/kottbullar.html
+++ b/recipes/kottbullar.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Köttbullar Recipe</title>
+  <link rel="stylesheet" href="../css/styles.css" type="text/css">
 </head>
 <body>
   <section>
