fix flammkuchen img alt

--- a/recipes/flammkuchen.html
+++ b/recipes/flammkuchen.html
@@ -9,7 +9,7 @@
 <body>
   <section>
     <h1>Flammkuchen Recipe</h1>
-    <img src="../img/flammkuchen.png" alt="Schnitzel">
+    <img src="../img/flammkuchen.png" alt="Flammkuchen">
   </section>
 </body>
 </html>
