add recipe description and directions

--- a/recipes/flammkuchen.html
+++ b/recipes/flammkuchen.html
@@ -10,6 +10,40 @@
   <section>
     <h1>Flammkuchen Recipe</h1>
     <img src="../img/flammkuchen.png" alt="Flammkuchen">
+    <h2>Description</h2>
+    <p>
+      Flammkuchen is a traditional dish from the Alsace region of France, 
+      also popular in Germany. It is a type of pizza-like flatbread made with a 
+      thin crust that is crispy on the outside and chewy on the inside. The 
+      crust is usually topped with a layer of crème fraîche, thinly sliced onions, 
+      and bacon or ham, and then baked in a hot oven until the crust is golden 
+      brown and the toppings are sizzling. The combination of the creamy, tangy 
+      crème fraîche with the salty, smoky bacon and sweet onions makes for a 
+      deliciously savory and satisfying flavor profile. Flammkuchen is often 
+      enjoyed as an appetizer or snack with a glass of wine, but it can also be 
+      served as a main course alongside a green salad.
+    </p>
+    <h2>Ingredients</h2>
+    <ul>
+      <li>1 lb pizza dough</li>
+      <li>1/2 cup crème fraîche</li>
+      <li>1 large onion, thinly sliced</li>
+      <li>6-8 slices of bacon, diced</li>
+      <li>1/2 tsp salt</li>
+      <li>1/4 tsp black pepper</li>
+      <li>1/4 tsp nutmeg</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+      <li>Preheat the oven to 450°F (230°C).</li>
+      <li>Roll out the pizza dough to a thin, oval shape and place it on a baking sheet lined with parchment paper.</li>
+      <li>Spread the crème fraîche over the dough, leaving a small border around the edges.</li>
+      <li>Top with the thinly sliced onions and diced bacon.</li>
+      <li>Sprinkle with salt, black pepper, and nutmeg.</li>
+      <li>Bake for 10-12 minutes, or until the crust is golden brown and crispy.</li>
+      <li>Slice and serve hot.</li>
+    </ol>
   </section>
 </body>
 </html>
+                                                                                
