--- a/recipes/schnitzel.html
+++ b/recipes/schnitzel.html
@@ -10,6 +10,40 @@
   <section>
     <h1>Schnitzel</h1>
     <img src="../img/schnitzel.png" alt="Schnitzel">
+    <h2>Description</h2>
+    <p>
+      Schnitzel is a traditional dish from Austria and Germany, which has now 
+      become popular worldwide. It is a thin slice of meat, usually pork, that 
+      is breaded and fried until crispy and golden brown. The result is a deliciously 
+      crispy and juicy cutlet that is perfect for a satisfying meal. Schnitzel 
+      can be served with various accompaniments such as mashed potatoes, french 
+      fries, or salad. It can also be served with a wedge of lemon on the side, 
+      which is used to give a tangy citrus flavor to the schnitzel.
+    </p>
+    <h2>Ingredients</h2>
+    <ul>
+      <li>4 thin pork cutlets</li>
+      <li>1/2 cup all-purpose flour</li>
+      <li>2 large eggs, beaten</li>
+      <li>1 cup breadcrumbs</li>
+      <li>1/2 tsp salt</li>
+      <li>1/4 tsp black pepper</li>
+      <li>1/4 tsp paprika</li>
+      <li>Vegetable oil for frying</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+      <li>Preheat the oven to 200°F (95°C).</li>
+      <li>Place the flour, beaten eggs, and breadcrumbs in separate shallow bowls.</li>
+      <li>Add salt, black pepper, and paprika to the breadcrumbs and mix well.</li>
+      <li>Dredge each pork cutlet in the flour, shaking off any excess.</li>
+      <li>Dip each cutlet in the beaten eggs, coating it well.</li>
+      <li>Press each cutlet into the seasoned breadcrumbs, ensuring that it is well-coated.</li>
+      <li>Heat the oil in a large frying pan over medium heat.</li>
+      <li>Add the breaded cutlets to the pan and cook for 3-4 minutes on each side or until golden brown and crispy.</li>
+      <li>Transfer the cooked schnitzels to a baking sheet and keep warm in the preheated oven.</li>
+      <li>Serve hot with your desired accompaniments.</li>
+    </ol>
   </section>
 </body>
 </html>
