--- a/recipes/kottbullar.html
+++ b/recipes/kottbullar.html
@@ -10,6 +10,44 @@
   <section>
     <h1>Köttbullar Recipe</h1>
     <img src="../img/kottbullar.png" alt="Köttbullar">
+    <h2>Description</h2>
+    <p>
+      Köttbullar, also known as Swedish meatballs, are a traditional Swedish 
+      dish made with a blend of ground beef and pork that is seasoned with spices 
+      like allspice and nutmeg. The meat mixture is then formed into small, 
+      bite-sized meatballs and pan-fried until golden brown. These meatballs are 
+      served with a rich and creamy gravy made from beef broth and heavy cream. In 
+      Sweden, they are typically served with mashed potatoes or lingonberry jam, 
+      but they can also be enjoyed with other side dishes like noodles or vegetables. 
+      They have become a popular dish worldwide, and are often found in Swedish 
+      restaurants and in frozen food sections of grocery stores.
+    </p>
+    <h2>Ingredients</h2>
+    <ul>
+      <li>1/2 lb ground beef</li>
+      <li>1/2 lb ground pork</li>
+      <li>1/2 cup breadcrumbs</li>
+      <li>1/2 cup milk</li>
+      <li>1 egg</li>
+      <li>1 small onion, finely chopped</li>
+      <li>1/2 tsp salt</li>
+      <li>1/4 tsp black pepper</li>
+      <li>1/4 tsp allspice</li>
+      <li>1/8 tsp nutmeg</li>
+      <li>2 tbsp butter</li>
+      <li>2 tbsp flour</li>
+      <li>2 cups beef broth</li>
+      <li>1/2 cup heavy cream</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+      <li>In a large bowl, combine the ground beef, ground pork, breadcrumbs, milk, egg, onion, salt, pepper, allspice, and nutmeg. Mix well.</li>
+      <li>Form the mixture into small meatballs, about 1 inch in diameter.</li>
+      <li>In a large skillet, melt the butter over medium heat. Add the meatballs and cook until browned on all sides, about 5 minutes. Remove the meatballs from the skillet and set aside.</li>
+      <li>Add the flour to the skillet and whisk until smooth. Gradually add the beef broth, whisking constantly, and cook until the gravy thickens, about 5 minutes.</li>
+      <li>Add the heavy cream to the skillet and whisk until smooth. Add the meatballs back to the skillet and simmer for 10-15 minutes, or until the meatballs are cooked through and the gravy is thick and creamy.</li>
+      <li>Serve the meatballs and gravy over egg noodles or mashed potatoes.</li>
+    </ol>
   </section>
 </body>
 </html>
